# face_detect

./: README.md  partitions.csv  sdkconfig  sdkconfig.old
components/camera_interface/: CMakeLists.txt  camera_interface.c
components/camera_interface/include/: camera_interface.h
components/ota_server/: CMakeLists.txt  ota_server.c
components/wifi_interface/: CMakeLists.txt  Kconfig.projbuild  wifi_interface.c
components/wifi_interface/include/: wifi_interface.h
image_server/: main.go
main/: CMakeLists.txt  app_main.cpp
tool/: convert_to_u8.py
